@@ -37,6 +37,7 @@
 * End rods now emit light.
 * Made it possible to manually set the Chunky settings directory via system
   properties (java -Dchunky.home=DIR).
+* Omni-Directional Stereo projector added (thanks leMaik!)
 
 1.3.8 - 2016-04-03
 
